--- a/INTRO.html
+++ b/INTRO.html
@@ -13,7 +13,7 @@
 
 <title>Intro to NRES 470/670</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
@@ -144,11 +144,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -177,8 +181,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -186,16 +190,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -472,7 +469,7 @@ Wildlife Populations), in which you will learn to fit wildlife
 population models to data in R. This class is also closely allied with
 NRES 421 (Conservation Biology), in that we learn and apply one of the
 most important tools used by conservation biologists and wildlife
-managers – population simulation models!</p>
+managers – population viability analysis (PVA)!</p>
 </div>
 <div id="syllabus" class="section level2">
 <h2>Syllabus:</h2>
@@ -484,10 +481,8 @@ href="Syllabus.pdf">here</a></p>
 </div>
 <div id="textbook" class="section level2">
 <h2>Textbook</h2>
-<p>I have provided PDF copies of all chapters of the course textbook (A
-Primer of Ecology, by Nick Gotelli) on WebCampus. However, I encourage
-you to pick up a copy of the textbook- you can purchase the textbook new
-or used on <a
+<p>The course textbook is “A Primer of Ecology” by Nick Gotelli. You can
+purchase the textbook new or used on <a
 href="https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1484867155&amp;sr=1-1&amp;keywords=a+primer+of+ecology">Amazon</a>.
 Previous editions (especially 3rd edition) are acceptable as well. All
 other readings will be posted on <a
@@ -500,7 +495,7 @@ critical in modern-day conservation biology and wildlife management. In
 this class, you will gain familiarity with computer programming and
 model building in <a href="https://insightmaker.com/">InsightMaker</a>,
 <a href="https://cran.r-project.org/">R</a>, and spreadsheet software
-(e.g., Excel, GSheets). I hope by the end of this class you will
+(e.g., Excel, Google Sheets). I hope by the end of this class you will
 understand how powerful and useful these tools can be – and not just for
 population ecology!</p>
 <p>See the <a href="Links.html">links page</a> for some useful
@@ -513,12 +508,11 @@ tutorials!).</p>
 prior to our class meetings. Most class periods will be devoted to
 discussion and hands-on modeling exercises (mini-labs) to give everyone
 a chance to apply the population ecology concepts from lectures and
-readings. Many class periods will also include short PointSolutions
-questions (discussion questions, multiple choice, etc), mostly to give
-me feedback about what concepts might need more reinforcing. Your
-responses to these questions will also help inform your participation
-score. <em>NOTE: you will not be penalized for incorrect responses in
-PointSolutions</em>!</p>
+readings. Many class periods will also include short Top Hat questions
+(discussion questions, multiple choice, etc), mostly to give me feedback
+about what concepts might need more reinforcing. Your responses to these
+questions will also help inform your participation score. <em>NOTE: you
+will not be penalized for incorrect responses in Top Hat</em>!</p>
 </div>
 <div id="out-of-class-activities" class="section level2">
 <h2>Out-of-class activities</h2>
@@ -528,9 +522,9 @@ time outside of class on:</p>
 <li>Studying assigned readings (see <a href="schedule.html">the
 schedule</a>) and online lecture materials (this website)<br />
 </li>
-<li>Finishing any problems/exercises you didn’t complete during class or
-lab<br />
-</li>
+<li>Finishing any problems/exercises you didn’t complete during
+class</li>
+<li>Completing lab activities</li>
 <li>Working on your final group projects.</li>
 </ol>
 </div>
