--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -14,7 +14,7 @@
 
 <title>Intro to population ecology</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
@@ -145,11 +145,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -178,8 +182,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -187,16 +191,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -345,7 +342,7 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -366,19 +363,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -435,7 +423,16 @@ div.tocify {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -456,7 +453,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Intro to population ecology</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2023</h4>
+<h4 class="date">Spring 2024</h4>
 
 </div>
 
@@ -473,35 +470,32 @@ class="section level2">
 </li>
 <li>What causes population densities to vary in space and time?<br />
 </li>
-<li>What causes populations to become extirpated? Recolonized?<br />
+<li>What causes populations to go extinct? Get recolonized?<br />
 </li>
 <li>What processes <em>regulate</em> population growth?
 <ul>
 <li>Extrinsic vs intrinsic factors (Nicholson vs Andrewartha
 debate)</li>
 </ul></li>
-<li>What prevents predator-prey relationships from collapsing?<br />
+<li>How can predators and prey coexist sustainably?<br />
 </li>
-<li>What factors allow competitors to coexist?</li>
-<li>What factors allow metapopulations to be stable and
-self-sustaining?</li>
+<li>What factors allow strong competitors to coexist?</li>
+<li>What levels of connectivity are needed to maintain sustainable
+metapopulations?</li>
 </ul>
 <p><img src="White-tailed_deer.jpg" style="width:50.0%" /></p>
 </div>
 <div id="conservation-and-management" class="section level3">
 <h3>Conservation and Management</h3>
 <ul>
-<li>What is the conservation status of a focal species or
-population?</li>
-<li>How do anthropogenic structures and land uses affect
-populations?</li>
-<li>What is the <em>Maximum Sustainable Yield</em> for a focal game
+<li>Is a focal species or population at risk of extinction?</li>
+<li>How do modern human land use practices affect populations?</li>
+<li>What is the <em>Maximum Sustainable Yield</em> for an important game
 species?</li>
-<li>How can pest species be effectively controlled?</li>
-<li>What specific land areas should be protected to preserve at-risk
-populations and metapopulations?</li>
-<li>What are the likely population-level effects of alternative
-conservation or management strategies?</li>
+<li>How can insect pests be effectively controlled?</li>
+<li>What land should be protected to preserve at-risk populations?</li>
+<li>How can we reduce extinction risk for a focal population while
+minimizing costs?</li>
 </ul>
 </div>
 </div>
@@ -511,7 +505,7 @@ conservation or management strategies?</li>
 of the same species occupying a particular space at a particular time,
 with the potential to breed with each other’</p>
 <p>Spatial boundaries defining populations sometimes are easily defined,
-but more typically are vague and difficult to determine.</p>
+but can also be vague and difficult to determine.</p>
 <p>Population size, or abundance, is often represented as <span
 class="math inline">\(N\)</span>, and is the most basic measurement of a
 wild population.</p>
@@ -521,15 +515,16 @@ id="exponential-growth-the-fundamental-principle-of-population-ecology"
 class="section level2">
 <h2>Exponential growth: the fundamental principle of population
 ecology</h2>
-<p><img src="Puffball1.png" style="width:50.0%" /></p>
+<p><img src="puffball1.png" style="width:50.0%" /></p>
 <p>Giant puffballs produce 7 trillion offspring (12 zeroes!) in one
 reproductive event … If all of those individuals reached adulthood, the
 descendants from just two parent puffballs would weigh more than the
 entire planet in two generations!</p>
-<p>The reason? Populations can exhibit <strong>exponential
-growth</strong>, in which each new addition to the population expands
-the reproductive potential of the population in a <strong>positive
-feedback loop</strong>.</p>
+<p>The reason? Populations can exhibit <strong>exponential, or
+multiplicative, growth</strong>, in which each each addition to the
+population expands the rate of population growth (more individuals mean
+more reproductive output), leading to a <strong>positive feedback
+loop</strong>.</p>
 </div>
 <div id="mathematics-and-population-ecology" class="section level2">
 <h2>Mathematics and Population Ecology</h2>
@@ -540,13 +535,11 @@ of the pond, points out that a good swim will help his work, and then
 pushes him in and leaves him to drown’<br />
 - Charles Elton, in reference to a work by Alfred Lotka</p>
 <p><img src="1976_Elton.jpg" style="width:30.0%" /></p>
-<p>The importance of the method is this: if we know certain variables,
-mostly desired by ecologists and in some cases already determined by
-them, we can predict certain results which would not normally be
-predictable or even expected by ecologists. The stage of verification of
-these mathematical predictions has hardly begun; but their importance
-cannot be under-estimated, and we look forward to seeing the further
-volumes of Lotka’s studies.<br />
+<p>‘The importance of the method is this: if we know certain variables,
+we can predict certain results which would not normally be predictable
+or even expected by ecologists. The stage of verification of these
+mathematical predictions has hardly begun; but their importance cannot
+be under-estimated.’<br />
 - Charles Elton</p>
 </div>
 <div id="exponential-growth" class="section level2">
@@ -562,10 +555,10 @@ and unexpected emergent properties.</p>
 <p>A reinforcing, or <strong>positive feedback</strong> (often called a
 ‘vicious circle’) leads to <em>exponential growth</em>, leading to
 insanely high numbers given enough time!</p>
-<p>A <strong>negative feedback</strong> is stabilizing, leading to nice,
-orderly, regulated systems (and homeostasis in organismal biology!).
-We’ll talk more about negative feedbacks in populations soon enough
-(population regulation).</p>
+<p>A <strong>negative feedback</strong> is stabilizing, leading to
+regulated systems (and homeostasis in organismal biology!). We’ll talk
+more about negative feedbacks in populations soon enough (population
+regulation).</p>
 <p>In the previous in-class exercise the model structure produced linear
 growth as the [Flow] added a fixed amount to the [Stock] in each time
 step.</p>
@@ -575,34 +568,24 @@ step.</p>
 <p><strong>Q</strong>: What do the following have in common: snowball,
 people, rabbits, fire, bacteria, fleas, savings accounts, cancer?</p>
 <p>Let’s build a model to help us better understand this process.</p>
-<p>This model adds a <strong>feedback</strong> using a [Link] from the
-[Stock] back into the [Flow]. The [Link] communicates the value of the
-[Stock] to the [Flow]. A [Link] only communicates information from one
-element of the model to another, it doesn’t actually change the value of
-the [Stock] (that is what a [Flow] does).</p>
+<p>This model includes a <strong>feedback</strong> in which the [Flow]
+rate depends on the amount currently in the [Stock].</p>
 <ol style="list-style-type: decimal">
 <li><p>Open InsightMaker. Create a [Stock] and a [Flow] as you did in
 the previous model (flow should be an input, not an output) and just
-name them <em>Stock</em> and <em>Flow</em> for now.</p></li>
+name them <em>Stock</em> and <em>Flow</em> for now.<br />
+</p></li>
 <li><p>If you mouse over <em>Stock</em> or <em>Flow</em> a small [<span
 class="math inline">\(=\)</span> Sign] will appear. If you click this it
 will open the <strong>Equation</strong> window where you can set values
 or equations. Open this window for the [Stock], enter a value of 1, then
 close the window.</p></li>
-<li><p>The value of the [Stock] can be communicated to the [Flow] with a
-[Link] (representing a feedback process!). To create a [Link], click
-<strong>Link</strong> in the <strong>Connections</strong> part of the
-toolbar (at the top). When you mouse over the [Stock] click on the blue
-arrow, drag the [Link] to the [Flow] and release. You now have a [Link]
-on top of the [Flow]. Now hold the Shift Key and click in the middle of
-the [Link] and a little green node will be created on the [Link]. You
-can select this node and drag it up so the [Link] isn’t directly on top
-of the [Flow] (now you can see the [Link]).</p></li>
 <li><p>Usually there is some type of factor governing the
 <strong>rate</strong> the [Stock] influences the [Flow]. Let’s introduce
 a [Variable] named <em>Rate</em>. To create a [Variable], right-click on
 the canvas and select <strong>Variable</strong> from the drop-down. Now
-draw a [Link] from <em>Rate</em> to the [Flow]. Open the
+draw a [Link] from <em>Rate</em> to the [Flow] (this allows you to use
+the <em>Rate</em> parameter in the equation for the [Flow]. Open the
 <strong>Equation</strong> window for <em>Rate</em> and set it to
 0.5.</p></li>
 <li><p>Open the <strong>Equation</strong> window for the [Flow] and set
@@ -610,19 +593,20 @@ it to [Stock] times [Rate]. That is, the total inflow into the [Stock]
 is equal to the value of the [Stock] multiplied by the value of
 <em>Rate</em>.</p></li>
 <li><p>Now click [Run Simulation] and you have just finished your first
-reinforcing loop simulation model! Does it do what you would
+exponential growth simulation model! Does it do what you would
 expect?</p></li>
 </ol>
 <p><strong>Q:</strong> If [Stock] is a population – say, rabbits – then
 what is the interpretation of [Flow]? What is the interpretation of
-<em>Rate</em>? <em>Rename your variables accordingly</em> and change the
-parameters to make the model more biologically realistic. Run the
-simulation again.</p>
+<em>Rate</em>? Clone your model, and then <em>Rename your variables
+accordingly</em> and change the parameters to make the model more
+biologically realistic for the biological processes they represent. Run
+the simulation again.</p>
 <p><strong>Q</strong> Recall the basic equation of exponential growth:
 <span class="math inline">\(\Delta N = r \cdot N_t\)</span>. How does it
 relate to the InsightMaker model you have just created? Which component
 of the equation refers to which component of the model in InsightMaker?
-[PointSolutions]</p>
+[Top Hat]</p>
 <ol start="7" style="list-style-type: decimal">
 <li>Think about the first question above while doing this (snowball,
 people, rabbits, fire, bacteria, fleas, savings accounts, cancer). How
@@ -636,12 +620,12 @@ will recognize this as the <em>foundational concept of population
 ecology</em>!</p>
 <p><strong>Q</strong> Can you model the puffball example from earlier in
 the lecture? How many giant puffballs are in the population after two
-generations?? [PointSolutions]</p>
+generations?? [Top Hat]</p>
 <p><strong>Q</strong> Can you (approximately) replicate the human
 population graph at the beginning of this lecture? What is the
 per-capita growth rate (<span class="math inline">\(r\)</span>) of the
-human population?? [PointSolutions] (NOTE: this is totally optional, but
-you could solve this analytically!)</p>
+human population?? [Top Hat] (NOTE: this is totally optional, but you
+could solve this analytically!)</p>
 <p>And just for fun, here is a <a
 href="https://www.youtube.com/watch?v=9znsuCphHUU&amp;list=PLE431532ABEAD0082">video</a>
 about exponential growth you might want to check out..</p>
