--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -470,13 +470,10 @@ class="section level2">
 </li>
 <li>What causes population densities to vary in space and time?<br />
 </li>
-<li>What causes populations to go extinct? Get recolonized?<br />
+<li>What causes populations to go extinct?<br />
 </li>
-<li>What processes <em>regulate</em> population growth?
-<ul>
-<li>Extrinsic vs intrinsic factors (Nicholson vs Andrewartha
-debate)</li>
-</ul></li>
+<li>What processes <em>regulate</em> population growth?<br />
+</li>
 <li>How can predators and prey coexist sustainably?<br />
 </li>
 <li>What factors allow strong competitors to coexist?</li>
