--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -529,7 +529,7 @@ id="exponential-growth-the-fundamental-principle-of-population-ecology"
 class="section level2">
 <h2>Exponential growth: the fundamental principle of population
 ecology</h2>
-<p><img src="puffball1.png" style="width:50.0%" /></p>
+<p><img src="puffball2.jpg" style="width:50.0%" /></p>
 <p>Giant puffballs produce 7 trillion offspring (12 zeroes!) in one
 reproductive event … If all of those individuals reached adulthood, the
 descendants from just two parent puffballs would weigh more than the
